<?xml version="1.0"?>
<package format="2">
  <name>franka_starter_controllers</name>
  <version>1.0.0</version>
  <description>Custom Franka robots controllers package for beginners </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="abdelhakimboubaker6@gmail.com">eniso-warudo</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>franka_hw</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <build_export_depend>controller_interface</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>franka_hw</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>realtime_tools</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
 

  <!-- exec_depend packages won't stop the build if they're not present 
  but you can install them using rosdep install
  ATTENTION: This package in particular has a python dependency that is not available via rosdep
  -->

  <exec_depend>controller_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>franka_hw</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>realtime_tools</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pygame</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>jsk_rviz_plugins</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  
  <!--  <build_depend>dynamic_reconfigure</build_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>


 This is where you make files that other packages should see public -->
  <export>
    <controller_interface plugin="${prefix}/franka_starter_controllers.xml"/>
  </export>
</package>
